[project]
name = "lexicon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.25.0",
    "aiogram-dialog>=2.4.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncio>=4.0.0",
    "pydantic-settings>=2.13.0",
    "redis>=7.2.0",
    "sqlalchemy>=2.0.46",
]
